# TYPETONESENSE-Typing-Speed-Stress-Analyzer

./: .gitignore  .replit  README.md  README_local.md  app.py  deploy.ps1  face_analyzer.py  pyproject.toml  pytest.ini  replit.md  requirements.txt
static/css/: animations.css  base.css  results.css  theme-toggle.css  theme.css  typing-test.css
static/js/: typing-test.js  typing-test.new.js
templates/: about.html  contact.html  index.html  results.html  test.html
tests/: test_endpoints.py  test_face_analyzer.py  test_flask_app.py  test_typing.test.js  test_ui.py  test_ui.py.bak
