[project]
name = "typetonesense"
version = "0.1.0"
description = "A typing test application with stress analysis"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-compress>=1.10.0",
    "python-dotenv>=0.19.0",
    "gunicorn>=20.1.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "Pillow>=8.0.0"
]

[project.dev-dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
isort = "^5.10.0"
flake8 = "^4.0.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
